# Team-Sparkz-Meta

./: Dockerfile  HF_SPACES_GUIDE.md  PITCH.md  QUICK_REFERENCE.md  README.md  SUBMISSION_CHECKLIST.md  demo.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py  test_submission.py
