[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "auditrepairenv"
version = "1.0.0"
description = "OpenEnv RL environment for cost-constrained iterative ledger repair with hidden dependency propagation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "server.app:main"
server_module = "server.app"
server_function = "main"